--- a/style.css
+++ b/style.css
@@ -44,6 +44,6 @@ li {
     margin: 1px;
 }
 img {
-    width: 200px;
-    border: 5px solid lightgreen;
+    width: 300px;
+    /* border: 5px solid lightgreen; */
 }
