--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,13 @@
 body {
     background-color: lightcyan;
-    background-image: url("src/backgrounds/sea");
+    background-image: url("./images/backgrounds/sea.png");
     text-align: center;
     font-family: "Pirate";
 }
 
 @font-face {
     font-family: "Pirate";
-    src:url("fonts/BattlesbridgeDemo-AL126.ttf")
+    src:url("./fonts/BattlesbridgeDemo-AL126.ttf")
 }
 
 .pirate {
